Fixed auth. Workout generation
