# docs/swagger.yaml
@@ -120,6 +120,22 @@ paths:
       summary: Ping
       tags:
       - Diagnostic
+  /workout/:userId/generate:
+    post:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      summary: Generate workout plan
+      tags:
+      - Workout
 securityDefinitions:
   ApiKeyAuth:
     in: header
