# main.go
@@ -104,13 +104,12 @@ func initRouter() *gin.Engine {
 		{
 			secured.GET("/ping", controllers.Ping)
 
-			workout := api.Group("/workout")
-			{
-				workout.GET("/:userId/:id", controllers.FetchWorkout)
-				workout.GET("/:userId/all", controllers.GetWorkoutPlanList)
-				workout.POST("/:userId/generate", controllers.GenerateWorkoutPlan)
-			}
-
+		}
+		workout := api.Group("/workout").Use(middlewares.Auth())
+		{
+			workout.GET("/:id", controllers.FetchWorkout)
+			workout.GET("/all", controllers.GetWorkoutPlanList)
+			workout.POST("/generate", controllers.GenerateWorkoutPlan)
 		}
 	}
 
